--- a/index.html
+++ b/index.html
@@ -148,6 +148,10 @@
       <p class="image-name">K.Chaitanya Sudha</p>
     </div>
     <div class="gallery-item">
+      <img src=dhana.jpeg" alt="Student 28">
+      <p class="image-name">N.Ramu</p>
+    </div>
+    <div class="gallery-item">
       <img src="jyothi.jpg" alt="Student 22">
       <p class="image-name">Ch.Jyothi</p>
     </div>
@@ -174,6 +178,10 @@
     <div class="gallery-item">
       <img src="ramu.jpg" alt="Student 28">
       <p class="image-name">N.Ramu</p>
+    </div>
+    <div class="gallery-item">
+      <img src="abhi.jpg" alt="Student 28">
+      <p class="image-name">Abhinaya</p>
     </div>
     <div class="gallery-item">
       <img src="sujata.jpg" alt="Student 29">
@@ -349,3 +357,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
