--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     </div>
     <div class="gallery-item">
       <img src=dhana.jpeg" alt="Student 28">
-      <p class="image-name">N.Ramu</p>
+      <p class="image-name">Dhana Lakshmi</p>
     </div>
     <div class="gallery-item">
       <img src="jyothi.jpg" alt="Student 22">
@@ -357,4 +357,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
