--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <p class="image-name">K.Chaitanya Sudha</p>
     </div>
     <div class="gallery-item">
-      <img src="dhana.jpeg" alt="Student 41">
+      <img src="dhana.jpg" alt="Student 41">
       <p class="image-name">Dhana Lakshmi</p>
     </div>
     <div class="gallery-item">
@@ -357,6 +357,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
