--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <img src="adc_tuni_new_logo.png" alt="College Logo" class="logo" />
 <div class="vinayaka-block">
  <center> <img src="chairman.jpeg" alt="Middle Image" class="middle-image" /></center>
-  <div class="festival-message">Happy Vinayaka Chaturthi</div>
+  <div class="festival-message">MERCADOFIN FEST</div>
 </div>
 <nav class="menu">
   <ul>
@@ -357,6 +357,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
