--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <header class="header">
 <img src="adc_tuni_new_logo.png" alt="College Logo" class="logo" />
 <div class="vinayaka-block">
- <center> <img src="chairman.jpeg" alt="Middle Image" class="middle-image" /></center>
+ <center> <img src="charman.jpeg" alt="Middle Image" class="middle-image" /></center>
   <div class="festival-message">MERCADOFIN FEST</div>
 </div>
 <nav class="menu">
@@ -357,6 +357,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
