--- a/index.html
+++ b/index.html
@@ -354,9 +354,15 @@
     </ul>
   </div>
 </div>
+  <div style="margin-top: 50px;">
+        <video width="640" height="360" controls>
+            <source src="v1.mp4" type="video/mp4">
+        </video>
+    </div>
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
