--- a/index.html
+++ b/index.html
@@ -354,14 +354,17 @@
     </ul>
   </div>
 </div>
+  <center>
   <div style="margin-top: 50px;">
         <video width="640" height="360" controls>
             <source src="v1.mp4" type="video/mp4">
         </video>
     </div>
+  </center>
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
