--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <center>
 <div class="event-info">
       <div><center><strong>Details</strong></center></div>
-      <div><strong>Date:</strong> 24TH AUGUST 2025</div>
+      <div><strong>Date:</strong> 31st AUGUST 2025</div>
       <div><strong>Time:</strong> 9.00 AM to 5.00 PM</div>
       <div><strong>Venue:</strong> COLLEGE SEMINAR HALL</div>
     </div>
@@ -283,7 +283,7 @@
     You are cordially invited to grace the occasion of <strong>Marcado Fin Fest 2025</strong>, future bridge of Aditya. Your esteemed presence will make the event truly special.
   </p>
   <p style="font-size: 1.1rem; max-width: 650px; margin: 0 auto 20px auto; text-align: center;">
-    <strong>Date:</strong> [24-08-2025] <br />
+    <strong>Date:</strong> [31-08-2025] <br />
     <strong>Time:</strong> [9.00AM to 5.00PM] <br />
     <strong>Venue:</strong> [Aditya Degree College SEMINAR HALL]
   </p>
@@ -365,6 +365,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
